syntax = "proto3";

option go_package = "proto_gen/proto_kv";

import "google/protobuf/empty.proto";
package proto;

service KV {
  rpc Put (PutRequest) returns (PutResponse) {}
  rpc Get (Key) returns (Entry) {}
  rpc List (google.protobuf.Empty) returns (Entries) {}
  rpc ListByPrefix (Key) returns (Entries) {}
  rpc ListKeyByPrefix (Key) returns (Keys) {}
  rpc Delete (Keys) returns (Keys) {}
}

message Key {
  string key = 1;
}
message Keys {
  repeated string keys = 1;
}
message Entry {
  string key = 1;
  bytes value = 2;
}
message Entries {
  map<string, bytes> entryMap = 1;
}

message PutRequest {
  Entry entry = 1;
  int64 expire = 2; // in seconds
}
message PutResponse {
  string message = 1;
}
